<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@drawable/home_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.AddAlarmFragment">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/hour_card_shape_bg"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <EditText
                android:id="@+id/edt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:padding="12dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/background_put_subject"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <LinearLayout
                android:id="@+id/addAlert_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:padding="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_description">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="16dp"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/txt_time_from"
                            android:drawableStart="@drawable/ic_time"
                            android:gravity="start|center"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginEnd="30dp"
                            android:layout_weight="1"
                            android:background="@drawable/background_put_subject"
                            android:hint="@string/from_time"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp"
                            android:textColor="@android:color/black"
                            android:textColorHint="#B5B5B5"
                            tools:ignore="Autofill,LabelFor,RtlSymmetry"
                             />

                        <TextView
                            android:id="@+id/txt_time_to"
                            android:drawableStart="@drawable/ic_time"
                            android:gravity="start|center"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:background="@drawable/background_put_subject"
                            android:hint="@string/to_time"
                            android:layout_marginEnd="20dp"
                            android:layout_marginStart="16dp"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp"
                            android:textColor="@android:color/black"
                            android:textColorHint="#B5B5B5"
                            tools:ignore="Autofill,LabelFor,RtlSymmetry" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="16dp"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/alert_Date"
                            android:drawableStart="@drawable/ic_date"
                            android:gravity="start|center"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginEnd="30dp"
                            android:layout_weight="1"
                            android:background="@drawable/background_put_subject"
                            android:hint="@string/date"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp"
                            android:textColor="@android:color/black"
                            android:textColorHint="#B5B5B5"
                            tools:ignore="Autofill,LabelFor,RtlSymmetry"
                             />


                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginEnd="30dp"
                            android:gravity="start|center"
                            android:layout_weight="1"
                            android:layout_margin="16dp"
                            android:paddingStart="12dp"
                            android:paddingEnd="14dp"
                            android:background="@drawable/background_put_subject"
                            android:layout_marginTop="16dp"
                            android:orientation="horizontal"
                            android:textColor="@android:color/black"
                            android:textColorHint="#B5B5B5"
                            tools:ignore="Autofill,LabelFor,RtlSymmetry"
                            android:weightSum="2">
                            <TextView
                                android:id="@+id/txt_event"
                                android:gravity="start|center"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_horizontal"
                                android:layout_weight="1"
                                android:hint="@string/type_of_event"
                                android:textColor="@android:color/black"/>
                            <Spinner
                                android:id="@+id/spinner_event"
                                android:gravity="start|center"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_horizontal"
                                android:layout_weight="1"
                                android:entries="@array/event_options"
                                android:textColor="@android:color/black" />

                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>
            <RadioGroup
                android:id="@+id/radioGroupNOrA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:weightSum="2"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginStart="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addAlert_layout">

                <RadioButton
                    android:id="@+id/notification"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:padding="12dp"
                    android:text="@string/notification"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/alarm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="12dp"
                    android:textColor="@color/white"
                    android:text="@string/alarm"
                    android:textSize="18sp" />
            </RadioGroup>

            <Button
                android:id="@+id/add_alarm_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_alert"
                android:textColor="@color/white"
                android:padding="16dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:layout_margin="12dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_bg"
                app:backgroundTint="@null"
                app:layout_constraintTop_toBottomOf="@id/radioGroupNOrA"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>