<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg"
    tools:context=".ui.fragments.HomeFragment">
    <LinearLayout
        android:id="@+id/swiperefresh"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/icon_img"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/cloudback4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/txt_city"/>

            <TextView
                android:id="@+id/txt_city"
                android:layout_width="match_parent"
                android:layout_margin="64dp"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:gravity="center"
                android:maxLines="1"
                android:minLines="1"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/icon_img"
                tools:text="Dokki" />

            <TextView
                android:id="@+id/txt_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_city"
                tools:text="Fri 12 February 12:23 am" />


            <TextView
                android:id="@+id/txtVw_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="14dp"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="75sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/img_weatherIcon"
                app:layout_constraintTop_toBottomOf="@id/txt_date"
                tools:text="7°" />

            <ImageView
                android:id="@+id/img_weatherIcon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="28dp"
                android:gravity="center"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.35"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_date"
                tools:src="@drawable/ic_cloudya" />
            <TextView
                android:id="@+id/txtVw_tempFeels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/nunito_light"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtVw_temp"
                tools:text="Feels like12\u00b0" />

            <TextView
                android:id="@+id/txtVw_desc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtVw_tempFeels"
                tools:text="Cloudy" />

            <!--            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"-->

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="8dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtVw_desc">

                <RelativeLayout
                    android:id="@+id/layout_humidity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_weight="1"
                    android:gravity="start"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_weatherIcon">

                    <ImageView
                        android:id="@+id/img_humidity"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="4dp"
                        android:src="@drawable/ic_humidity" />

                    <TextView
                        android:id="@+id/txtVw_humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/img_humidity"
                        android:layout_centerInParent="true"
                        android:text="@string/humidity"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/txtVw_ValueHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtVw_humidity"
                        android:layout_centerInParent="true"
                        android:layout_margin="4dp"
                        android:textColor="@color/white" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layout_pressure"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/relativeLayout"
                    app:layout_constraintHorizontal_bias="0.54"
                    app:layout_constraintStart_toEndOf="@+id/layout_humidity"
                    app:layout_constraintTop_toBottomOf="@+id/img_weatherIcon">

                    <ImageView
                        android:id="@+id/img_pressure"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="4dp"
                        android:src="@drawable/ic_pressure" />

                    <TextView
                        android:id="@+id/txtVw_pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/img_pressure"
                        android:layout_centerInParent="true"
                        android:text="@string/pressure"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/txtVw_valuePressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtVw_pressure"
                        android:layout_centerInParent="true"
                        android:layout_margin="4dp"
                        android:textColor="@color/white" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_weatherIcon">

                    <ImageView
                        android:id="@+id/img_speed"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="4dp"
                        android:src="@drawable/ic_wind" />

                    <TextView
                        android:id="@+id/txtVw_speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/img_speed"
                        android:layout_centerInParent="true"
                        android:text="@string/speed_wind"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/txtVw_valueSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtVw_speed"
                        android:layout_centerInParent="true"
                        android:layout_margin="4dp"
                        android:textColor="@color/white" />

                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/layout_cloud"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_weight="1"
                    android:gravity="start"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_weatherIcon">

                    <ImageView
                        android:id="@+id/img_cloud"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="4dp"
                        android:src="@drawable/ic_cloud" />

                    <TextView
                        android:id="@+id/txtVw_cloud"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/img_cloud"
                        android:layout_centerInParent="true"
                        android:text="@string/cloud"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/txtVw_ValueCloud"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtVw_cloud"
                        android:layout_centerInParent="true"
                        android:layout_margin="4dp"
                        android:textColor="@color/white" />

                </RelativeLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">
                <TextView
                    android:id="@+id/txt_24_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_24_hours"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_24_hour"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_24_hour"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_hourly"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">
                <TextView
                    android:id="@+id/txt_7_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_7_days_forecast"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_7_day"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/hour_card_shape_bg"
                    app:layout_constraintTop_toBottomOf="@id/txt_7_days"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_daily"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>

